LSC 2kt design PMT in the buffer added

--- a/LscSim/CMakeLists.txt
+++ b/LscSim/CMakeLists.txt
@@ -39,6 +39,7 @@ include(${ROOT_USE_FILE})
 option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
 if(WITH_GEANT4_UIVIS)
     find_package(Geant4 REQUIRED ui_all vis_all)
+    add_definitions(-DG4VIS_USE)
 else()
     find_package(Geant4 REQUIRED)
 endif()
